# LLVM-Bgnr-Instrumentation

./: README.md
ClangInstrumentation/: CMakeLists.txt  Modify.cpp  README.md
InjectPrintWithClang/: README.md  ex1  ex1_output.txt  ex2
InjectPrintopt/: CMakeLists.txt  README.md  module_dir.cpp
